polkadot/xcm/procedural/tests/ui/builder_pattern/wrong_target.stderr
error: Expected the `Instruction` enum
  --> tests/ui/builder_pattern/wrong_target.rs:23:1
   |
23 | struct SomeStruct;
   | ^^^^^^^^^^^^^^^^^^
